Criação de segue para listagem de carros da marca selecionada

--- a/Caue/Base.lproj/Main.storyboard
+++ b/Caue/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Wlu-gh-etZ" kind="show" identifier="vehicles" id="udq-HY-dij"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -48,6 +51,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mSX-S4-hol" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1279.2" y="112.89355322338831"/>
+        </scene>
+        <!--Veiculos Table View Controller-->
+        <scene sceneID="uYi-HE-8r4">
+            <objects>
+                <tableViewController id="Wlu-gh-etZ" customClass="VeiculosTableViewController" customModule="Caue" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="gdf-Mn-bBJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="QlD-mv-2hw">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QlD-mv-2hw" id="yXm-LR-gLI">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Wlu-gh-etZ" id="yso-FZ-TlF"/>
+                            <outlet property="delegate" destination="Wlu-gh-etZ" id="HB6-sB-XDH"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7rz-HT-oIt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2123" y="112"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6IG-CB-jew">
