--- a/Caue/Base.lproj/Main.storyboard
+++ b/Caue/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
             </objects>
             <point key="canvasLocation" x="1279.2" y="112.89355322338831"/>
         </scene>
-        <!--Veiculos Table View Controller-->
+        <!--Marca-->
         <scene sceneID="uYi-HE-8r4">
             <objects>
                 <tableViewController id="Wlu-gh-etZ" customClass="VeiculosTableViewController" customModule="Caue" customModuleProvider="target" sceneMemberID="viewController">
@@ -75,6 +75,9 @@
                             <outlet property="delegate" destination="Wlu-gh-etZ" id="HB6-sB-XDH"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Marca" id="9Ce-G3-bmq">
+                        <barButtonItem key="backBarButtonItem" title=" " id="3gL-yN-Tvi"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7rz-HT-oIt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
