Listagem de modelos de um veículo

--- a/Caue/Base.lproj/Main.storyboard
+++ b/Caue/Base.lproj/Main.storyboard
@@ -68,6 +68,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="riR-46-42L" kind="show" identifier="vehicles_models" id="1zX-bC-xEZ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -82,6 +85,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7rz-HT-oIt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2123" y="112"/>
+        </scene>
+        <!--Models Table View Controller-->
+        <scene sceneID="uw2-ZH-EKR">
+            <objects>
+                <tableViewController id="riR-46-42L" customClass="ModelsTableViewController" customModule="Caue" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="5PT-Lj-BHX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="0xJ-wt-FET">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0xJ-wt-FET" id="sPK-4D-pNd">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="riR-46-42L" id="0q6-Rb-WkO"/>
+                            <outlet property="delegate" destination="riR-46-42L" id="hzj-Fr-KlY"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wqr-AS-bPt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2998" y="112"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6IG-CB-jew">
